src/objects/Section_Product_Cover_Code__c.object
<CustomObject>
    <fields>
        <fullName>CoverCode__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CoverCode</label>
        <referenceTo>CoverCode__c</referenceTo>
        <relationshipLabel>Section Product Cover Codes</relationshipLabel>
        <relationshipName>Section_Product_Cover_Codes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID for Reference</description>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Product</label>
        <referenceTo>Section_Product__c</referenceTo>
        <relationshipLabel>Section Product Cover Codes</relationshipLabel>
        <relationshipName>Section_Product_Cover_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <formula>CoverCode__r.Sort_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thunderhead_Description__c</fullName>
        <formula>CoverCode__r.Thunderhead_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thunderhead Description</label>
        <type>Text</type>
    </fields>
    <label>Section Product Cover Code</label>
    <nameField>
        <displayFormat>SPCC-{0000}</displayFormat>
        <label>Section Product Cover Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section Product Cover Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>